# tensor_beasts

./: .gitignore  README.md  beast_config.yaml  main.py  move.py  notes.md  pyproject.toml  terrain_config.yaml
tensor_beasts/: comparator.py  display_manager.py  main.py  main_torch.py  state_updates.py  state_updates_numpy.py  state_updates_torch.py  util.py  util_numpy.py  util_torch.py  world.py
tensor_beasts/entities/: __init__.py  animal.py  entity.py  feature.py  plant.py  terrain.py
tensor_beasts/features/: animal_features.py  feature.py  plant_features.py  shared_features.py  terrain_features.py
tensor_beasts/rl/: __init__.py  env.py  iqn_agent.py  iqn_loss.py  nn_utils.py  replay_buffer.py  trainer.py
tensor_beasts/rl/dqn/: dqn_script.py  masked_dqn_loss.py  sweep.yaml  tensor_beasts_config.yaml  utils.py
tensor_beasts/rl/envs/: __init__.py  world_environment.py
tensor_beasts/rl/iql/: iql_script.py  online_config.yaml  utils.py
tensor_beasts/rl/iqn/: iqn_agent.py  iqn_loss.py  iqn_trainer.py
tensor_beasts/rl_agents/: iqn_agent.py  iqn_agent_bak.py
tests/: test_state_updates.py  test_util.py  test_util_numpy.py  test_util_torch.py
