[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["kevin <kjhenner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pygame = "^2.5.2"
PyOpenGL = "^3.1.7"
torch = "^2.3.0"
scipy = "^1.13.1"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
