[tool.poetry]
name = "tensor_beasts"
version = "0.0.1"
description = "Ecological simulation that mostly uses tensor operations."
authors = ["kevin <kjhenner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
PyOpenGL = "^3.1.7"
torch = "^2.3.0"
pytest = "^8.2.1"
numpy = "^1.26.4"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
